# dip-hw1

./: CMakeLists.txt  README.md  README.txt
src/: hw1a.cpp  hw1b.cpp  hw1c.cpp
